T3ENCBE-98 fix collapse button width

--- a/Resources/Private/Frontend/Styles/BackendAreas/Mixins/Sidebar/CollapseButtonPosition.scss
+++ b/Resources/Private/Frontend/Styles/BackendAreas/Mixins/Sidebar/CollapseButtonPosition.scss
@@ -17,7 +17,7 @@
             top: auto;
             left: 0;
             z-index: 100000;
-            width: 66px;
+            width: 64px;
             padding-right: 0;
             display: inline-flex;
             align-items: center;
